# PGBenchie

./: .env  Cargo.toml  README.md
queries/: 10_populate_child.sql  2_parent_creation.sql  3_second_parent_clean.sql  4_second_parent_creation.sql  5_child_clean.sql  6_child_creation.sql  7_child_index.sql  8_populate_first_parent.sql  9_populate_second_parent.sql  get_expired_attributes.sql  get_target_group.sql  parent_table.sql  upsert_attribute.sql
src/: main.rs  utils.rs
