[package]
name = "pgbenchie"
version = "0.1.0"
authors = ["Alisa Dammer <alisa.dammer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.4.0", features = [ "runtime-tokio-rustls", "postgres", "macros" ] }
tokio = "0.2"
anyhow = "1"
dotenv = "0.15.0"
rand = "0.7"
futures = "0.3"
itertools = "0.9"
structopt = "0.3"

[profile.release]
lto = true
codegen-units = 1
